--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nima/keyword-extractor",
+    "name": "keyword/keyword-extractor",
     "description": "This is used to extractor keyword form the given description and return list of keywords.",
     "type": "composer-plugin",
     "autoload": {
