--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "keyword/keyword-extractor",
     "description": "This is used to extractor keyword form the given description and return list of keywords.",
+    "type": "composer-plugin",
     "autoload": {
         "psr-4": {
             "KeywordExtractor\\": "src/"
